:bug: Fix icons alignment

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -12,7 +12,8 @@
   margin: 0;
 }
 
-:global(#___gatsby) {
+:global(#___gatsby),
+:global(#___gatsby) > div {
   height: 100%;
 }
 
